Veterinaria first commit. Nesting double trouble / Not the Fire Saga song

--- a/app/views/pet_histories/show.html.erb
+++ b/app/views/pet_histories/show.html.erb
@@ -1,19 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Weight:</strong>
+  <strong>Peso:</strong>
   <%= @pet_history.weight %>
 </p>
 
 <p>
-  <strong>Heigth:</strong>
+  <strong>Altura:</strong>
   <%= @pet_history.heigth %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Descripción:</strong>
   <%= @pet_history.description %>
 </p>
 
-<%= link_to 'Edit', edit_pet_history_path(@pet_history) %> |
-<%= link_to 'Back', pet_histories_path %>
+<%= link_to 'Editar', edit_pet_history_path(@pet_history) %> |
+<%= link_to 'Volver', pet_histories_path %>
