--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', pet: @pet %>
 
-<%= link_to 'Show', @pet %> |
-<%= link_to 'Back', pets_path %>
+<%= link_to 'Mostrar', client_pets_path(@client) %> |
+<%= link_to 'Volver', client_pets_path(@client) %>
