--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: pet, local: true) do |form| %>
+<%= form_with(model: [@client, pet], local: true) do |form| %>
   <% if pet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(pet.errors.count, "error") %> prohibited this pet from being saved:</h2>
@@ -12,21 +12,26 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label 'Nombre' %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :race %>
+    <%= form.label 'Raza' %>
     <%= form.text_field :race %>
   </div>
 
   <div class="field">
-    <%= form.label :birthdate %>
+    <%= form.label 'Cumpleaños' %>
     <%= form.date_select :birthdate %>
   </div>
 
+    <div class="field">
+    <%= form.label 'Dueño' %>
+    <%= form.select :client_id, options_for_select(@clients) %>
+  </div>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Guardar' %>
   </div>
 <% end %>
