--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pets</h1>
+<h1>Mascota</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Race</th>
-      <th>Birthdate</th>
+      <th>Nombre</th>
+      <th>Raza</th>
+      <th>Cumpleaños</th>
       <th>Visitas</th>
+      <th>Historial</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,9 +21,14 @@
         <td><%= pet.race %></td>
         <td><%= pet.birthdate %></td>
         <td><%= pet.history_count%></td>
-        <td><%= link_to 'Show', pet %></td>
-        <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-        <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% pet.pet_histories.each do |pet_history|%>
+          <span><%= pet_history.created_at %>  > <%= pet_history.description%></span><br/>
+            <%end%>
+        </td>
+      
+        <td><%= link_to 'Mostrar', client_pet_path(pet.client, pet) %></td>
+        <td><%= link_to 'Editar', edit_client_pet_path(pet.client, pet)  %></td>
+        <td><%= link_to 'Borrar', client_pet_path(pet.client, pet), method: :delete, data: { confirm: '¿Está seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Pet', new_pet_path %>
+<%= link_to 'Nueva mascota', new_client_pet_path(@client) %>
