--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Mascota</h1>
+<h1>Todas las mascotas</h1>
 
 <table class="table table-striped">
   <thead>
@@ -15,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @pets.each do |pet| %>
+    <% @all_pets.each do |pet| %>
       <tr>
         <td><%= pet.name %></td>
         <td><%= pet.race %></td>
@@ -34,6 +32,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Nueva mascota', new_client_pet_path(@client) %>
