--- a/app/views/pet_histories/_form.html.erb
+++ b/app/views/pet_histories/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :weight %>
+    <%= form.label 'Peso' %>
     <%= form.text_field :weight %>
   </div>
 
   <div class="field">
-    <%= form.label :heigth %>
+    <%= form.label 'Altura' %>
     <%= form.text_field :heigth %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label 'Observaciones' %>
     <%= form.text_area :description %>
   </div>
 
@@ -32,6 +32,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Guardar' %>
   </div>
 <% end %>
