--- a/app/views/pet_histories/edit.html.erb
+++ b/app/views/pet_histories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', pet_history: @pet_history %>
 
-<%= link_to 'Show', @pet_history %> |
-<%= link_to 'Back', pet_histories_path %>
+<%= link_to 'Mostrar', @pet_history %> |
+<%= link_to 'Volver', pet_histories_path %>
