--- a/app/views/pet_histories/index.html.erb
+++ b/app/views/pet_histories/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pet Histories</h1>
+<h1>Historial de Mascota</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Weight</th>
-      <th>Heigth</th>
-      <th>Description</th>
+      <th>Peso</th>
+      <th>Altura</th>
+      <th>Descripción</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= pet_history.weight %></td>
         <td><%= pet_history.heigth %></td>
         <td><%= pet_history.description %></td>
-        <td><%= link_to 'Show', pet_history %></td>
-        <td><%= link_to 'Edit', edit_pet_history_path(pet_history) %></td>
-        <td><%= link_to 'Destroy', pet_history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar', pet_history %></td>
+        <td><%= link_to 'Editar', edit_pet_history_path(pet_history) %></td>
+        <td><%= link_to 'Borrar', pet_history, method: :delete, data: { confirm: '¿Está seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Pet History', new_pet_history_path %>
+<%= link_to 'Nuevo Registro', new_pet_history_path %>
